data/paper_artifacts/deepseek_v4_pro_ohos10_0613_harness_fixed_v2/projects/posix__1b7f59c68bbc/.c2r_bindgen_extern/osal_mem_81c0ccdd.externs.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub type size_t = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn malloc(arg1: size_t) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn free(arg1: *mut ::core::ffi::c_void);
}
unsafe extern "C" {
    pub fn posix_memalign(
        arg1: *mut *mut ::core::ffi::c_void,
        arg2: size_t,
        arg3: size_t,
    ) -> ::core::ffi::c_int;
}
pub type errno_t = ::core::ffi::c_int;
unsafe extern "C" {
    pub fn memset_s(
        dest: *mut ::core::ffi::c_void,
        destMax: size_t,
        c: ::core::ffi::c_int,
        count: size_t,
    ) -> errno_t;
}
pub const LOG_TYPE_MIN: LogType = 0;
pub const LOG_APP: LogType = 0;
pub const LOG_INIT: LogType = 1;
pub const LOG_CORE: LogType = 3;
pub const LOG_KMSG: LogType = 4;
pub const LOG_ONLY_PRERELEASE: LogType = 5;
pub const LOG_TYPE_MAX: LogType = 6;
pub type LogType = ::core::ffi::c_uint;
pub const LOG_LEVEL_MIN: LogLevel = 0;
pub const LOG_DEBUG: LogLevel = 3;
pub const LOG_INFO: LogLevel = 4;
pub const LOG_WARN: LogLevel = 5;
pub const LOG_ERROR: LogLevel = 6;
pub const LOG_FATAL: LogLevel = 7;
pub const LOG_LEVEL_MAX: LogLevel = 8;
pub type LogLevel = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn HiLogPrint(
        type_: LogType,
        level: LogLevel,
        domain: ::core::ffi::c_uint,
        tag: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
